--- a/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/Details.cshtml
@@ -110,6 +110,12 @@
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.Class_asociado.Customer_part_number)</dd>
                                         <dt class="col-sm-2">Material</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.MM_asociado.Type_of_Material)</dd>
+                                        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.produccion_datos_entrada.orden_sap)</dt>
+                                        <dd class="col-sm-2">@Html.DisplayFor(model => model.produccion_datos_entrada.orden_sap)</dd>
+                                        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.produccion_datos_entrada.numero_rollo)</dt>
+                                        <dd class="col-sm-2">@Html.DisplayFor(model => model.produccion_datos_entrada.numero_rollo)</dd>
+                                        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.produccion_datos_entrada.lote_rollo)</dt>
+                                        <dd class="col-sm-2">@Html.DisplayFor(model => model.produccion_datos_entrada.lote_rollo)</dd>
                                         <dt class="col-sm-2">Peso Neto Unitario</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.produccion_datos_entrada.peso_real_pieza_neto)</dd>
                                     </dl>
