--- a/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/Reportes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/InspeccionRegistros/Reportes.cshtml
@@ -116,7 +116,7 @@
                                                 </div>
                                                 <label class="control-label col-md-1 col-sm-1" for="linea">L&iacute;nea</label>
                                                 <div class="col-md-3 col-sm-3 ">
-                                                    @Html.DropDownList("id_linea", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @required = "required", @style = "width:100%" })
+                                                    @Html.DropDownList("id_linea", null, htmlAttributes: new { @class = "form-control select2bs4", @required = "required", @style = "width:100%" })
                                                     <span class="field-validation-valid text-danger" data-valmsg-for="id_linea" data-valmsg-replace="true"></span>
                                                 </div>
                                             </div>
