--- a/CódigoFuente/BitacorasProduccion/Views/PM_poliza_manual_modelo/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PM_poliza_manual_modelo/Index.cshtml
@@ -1,14 +1,16 @@
-﻿@model IEnumerable<Portal_2_0.Models.PM_autorizadores>
+﻿@model IEnumerable<Portal_2_0.Models.PM_poliza_manual_modelo>
 
 @{
-    ViewBag.Title = "Cátalogos de Usuarios Controlling";
+    ViewBag.Title = "Listado de Pólizas Modelo";
     ViewBag.PrimerNivel = "polizas_manuales";
-    ViewBag.SegundoNivel = "PM_catalogos_admin";
-    ViewBag.TercerNivel = "PM_autorizadores";
-    ViewBag.ControllerName = "PM_autorizadores";
+    ViewBag.SegundoNivel = "PM_catalogos";
+    ViewBag.TercerNivel = "PM_poliza_modelo";
+    ViewBag.ControllerName = "PM_poliza_manual_modelo";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 
+    //obtiene los filtros
+    Portal_2_0.Models.Paginacion paginacionFiltros = (Portal_2_0.Models.Paginacion)ViewBag.Paginacion;
 }
 
 
@@ -16,6 +18,7 @@
 {
     <!-- DataTables -->
     @Styles.Render("~/Content/dataTables_css")
+
     <!-- SweetAlert2 -->
     <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
 }
@@ -29,11 +32,6 @@
 
 <div class="right_col" role="main">
     <div class="">
-        <div class="page-title">
-            <div class="title_left">
-                <h3>@ViewBag.Title</h3>
-            </div>
-        </div>
 
         <div class="clearfix"></div>
 
@@ -61,17 +59,22 @@
                                             Crear nuevo
                                         </a>
                                     </div>
-                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable_1" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
-
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.id_empleado)
+                                                    @Html.DisplayNameFor(model => model.descripcion)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.fecha_creacion)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.comentario)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
-                                                <th></th>
+                                                <th>Acciones</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -79,10 +82,16 @@
                                             {
                                                 <tr>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
+                                                        @Html.DisplayFor(modelItem => item.descripcion)
                                                     </td>
-
                                                     <td>
+                                                        @Html.DisplayFor(modelItem => item.fecha_creacion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.comentario)
+                                                    </td>
+                                                    <td>
+
                                                         @if (item.activo)
                                                         {
                                                             <span>Activo</span>
@@ -91,11 +100,13 @@
                                                         {
                                                             <span>Inactivo</span>
                                                         }
+                                                       
                                                     </td>
                                                     <td>
-                                                        @*<a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
-                                                                <i class="fa fa-pencil-square-o"></i>
-                                                            </a>*@
+
+                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                            <i class="fa fa-pencil-square-o"></i>
+                                                        </a>
                                                         <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
                                                             <i class="fa fa-info-circle"></i>
                                                         </a>
@@ -103,13 +114,13 @@
                                                         @if (!item.activo)
                                                         {
                                                             <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
-                                                                <i class="fa fa-unlock"></i>
+                                                                <i class="fa fa-check"></i>
                                                             </a>
                                                         }
                                                         else
                                                         {
                                                             <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
-                                                                <i class="fa fa-lock"></i>
+                                                                <i class="fa fa-times"></i>
                                                             </a>
                                                         }
 
@@ -119,6 +130,13 @@
                                         </tbody>
                                     </table>
                                 </div>
+                                <br />
+                                @if (Model.Count() > 0)
+                                {
+                                    <nav id="nav_paginacion" aria-label="...">
+                                        @{Html.RenderPartial("_Paginacion", Model);}
+                                    </nav>
+                                }
                             </div>
                         </div>
                     </div>
@@ -135,7 +153,25 @@
 
     @Scripts.Render("~/bundles/dataTables_js")
 
+    <script>
+
+        $(document).ready(function () {
+
+            //inicializa los data table
+            var tabla = $('#datatable_1').DataTable({
+                "paging": false,
+                "ordering": false,
+                "searching": false,
+                "scrollX": true,
+                "info": false
+            });
+
+        });
+      
+        //agranda el tamaño de la barra
+        window.onload = function () {
+            clicMenu(2); //dos veces para acomodar la tabla
+        }
+    </script>
 }
-
-
 
